# trios-railway

./: .dockerignore  .env  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DASHBORD_TASKS.md  DOCTOR_TRAINER_FIX.md  Dockerfile.gpu  Dockerfile.igla-gf  Dockerfile.mcp  Dockerfile.seed-agent  LAWS.md  MCP_GATEWAY_SETUP.md  Makefile  RAILWAY_DEPLOYMENT.md  README.md  RUNBOOK.md  SUBMIT_PR_INSTRUCTIONS.md  WORKER_HEAL_ONESHOT.md  agent-queue-drain-fixed.yml  format_benchmark  format_benchmark.zig  format_benchmark_ascii.zig  mission.target.toml  package-lock.json  railway-service.json  railway-template.json  railway.toml  railway.toml.template  restore-fleet.json  rt-1-baseline.json  rt-2-gf16.json  rt-3-gf8.json  rt-final-trainer-1.json  rt-real-trainer-1.json  rt-real-trainer-2.json  rt-real-trainer-3.json  rt-real-trainer-final.json  simple_bench  (+5 more)
.claude/: scheduled_tasks.json
.claude-flow/github/: store.json
.github/: sentinel-state.json
.github/wave-a/: acc47-services.csv  trainer-services.csv  wave-a-cells-v2.csv  wave-a-cells.csv
.github/workflows/: apply-migrations.yml  apply-single-migration.yml  audit-watchdog.yml  build-mcp-image.yml  build-real-seed-agent.yml  build-seed-agent-image.yml  deploy-from-template.yml  deploy-scarab.yml  diag-arch-full.yml  diag-trainer-logs.yml  discover-acc47.yml  docker-mcp.yml  docker-trainer.yml  doctor-loop.yml  dr-restore.yml  fleet-snapshot.yml  gardener-image.yml  gardener-loop.yml  inventory.yml  kill-stale-waves.yml  mass-deploy-arch.yml  mass-revive-strategy.yml  matrix-probe.yml  mcp-diagnose.yml  mcp-emergency-redeploy.yml  probe-railway.yml  raise-smoke.yml  redeploy-single.yml  refresh-acc47.yml  sentinel-watch.yml  sleep-nca-hybrid.yml  smoke.yml  sovereign-scarab.yml  ssot-probe.yml  test-create-acc4.yml  tier1-explore-acc13.yml  tier1-explore.yml  tier2-explore-v2.yml  tier2-explore.yml  token-classify.yml  (+11 more)
.swarm/: model-router-state.json
.trinity/: WORKER_HEAL_ONESHOT.md  corpus_inventory.sql  gardener-brain.json  p0_apply_all.sh  p0_nan_guard.sql  p0_prune_mocks.sql  p0_replay_e0058_quorum.sql  p1_extension.toml  phase_e_gf_honest.sql  phase_e_gf_separate.sql  phase_e_gf_sweep.sql  phase_e_hyperparameter_sweep.sql  phase_e_plan.json  phase_f_champion_lane.sql  phase_f_h1536_variants.sql  phase_f_quorum.sql  phase_f_replay.sql  phase_f_smoke_h1024.sql  phase_f_smoke_h2048.sql  phase_g_h4096_golf.sql  railway_vars_b84f7b81.txt  rng_determinism_check.sql  timeout_fix.sql  trios_442_withdrawal_draft.md
.trinity/dashboard/: IGLA_RACE_DASHBOARD_20260428.md  IGLA_RACE_STATUS_20260428.md
.trinity/experience/: 2026-04-28-alpha-scale-up.md  2026-04-28-general-session.md  2026-05-17.md  20260428.trinity  20260430.trinity  236-PromptWizard.md  52-ALFA-bisect-analysis.md  66-DELTA.md  trios_railway_20260428.trinity  trios_railway_20260430.trinity
.trinity/promotion-artifacts/: step-g-deploy-real-fleet.md
.trinity/prompts/: agent-dispatch.md
.trinity/results/: cpu_train_seed42.json
.trinity/state/: army-status.md  order-pr-69.md  order-pr-70.md  order-pr-71.md  order-pr-72.md  order-pr-73.md  three-roads.json
.trinity/tasks/: railway-multi-seed-investigation.md
configs/: gate0-smoke.toml
crates/gf-gradient-benchmark/: Cargo.toml
crates/gf-gradient-benchmark/scripts/: analyze.py
crates/gf-gradient-benchmark/src/: lib.rs  main.rs
crates/gf-gradient-benchmark/src/metrics/: mod.rs
crates/gf-gradient-benchmark/src/quantize/: mod.rs
crates/gf-gradient-benchmark/src/runner/: mod.rs
crates/gf-gradient-benchmark/src/surfaces/: mod.rs
crates/tri-core/: Cargo.toml
crates/tri-core/src/: lib.rs
crates/tri-doctor/: Cargo.toml
crates/tri-doctor/src/: main.rs
crates/tri-exp/: Cargo.toml
crates/tri-exp/src/: lib.rs
crates/tri-ledger/: Cargo.toml
crates/tri-ledger/src/: lib.rs
crates/trios-igla-ops/: Cargo.toml
crates/trios-igla-ops/src/: accounts.rs  lib.rs  neon.rs
crates/trios-igla-race-hack/rings/SR-01-scarab-ring/: Cargo.toml
crates/trios-igla-race-hack/rings/SR-01-scarab-ring/src/: lib.rs
crates/trios-igla-race-hack/rings/SR-03-scarab-soul/: Cargo.toml
crates/trios-igla-race-hack/rings/SR-03-scarab-soul/src/: lib.rs
crates/trios-igla-race-hack/rings/SR-04-scarab-gate/: Cargo.toml
crates/trios-igla-race-hack/rings/SR-04-scarab-gate/src/: lib.rs
crates/trios-lane-diversity-gate/: Cargo.toml
crates/trios-lane-diversity-gate/src/: main.rs
crates/trios-numeric-catalog/: Cargo.toml
crates/trios-numeric-catalog/src/: lib.rs
crates/trios-railway-mcp/: Cargo.toml  MULTI_ACCOUNT.md
crates/trios-railway-mcp/src/: connections.rs  main.rs  tools.rs  tripwires.rs
disaster-recovery/: fleet-snapshot.json  plan9-expected-trainers.json
docs/: ADR-0042-pull-loop.md  CHAMPION_SNAPSHOT_2026-04-28T1600.md  DEPLOY_SOVEREIGN_SCARAB_V4.md  DISASTER_RECOVERY.md  DR.md  FLEET_OPERATIONS.md  GARDENER_ONESHOT.md  IMPROVEMENT_PLAN.md  LESSONS_LEARNED_2026-04-27.md  MCP_MESH_CONFIG.md  P1_ATTENTION_BACKWARD_FIX.md  P1_EXECUTION_SUMMARY.md  POSTMORTEM_GATE2_LOCAL_WIN.md  RESTORE_CLI_SPEC.md  lane-registry-r7.md
experiments/: champion-exact.toml
memory/: igla_canon_spec_violation.md
migrations/: 0001_railway_audit.sql  0002_experiment_queue.sql  0003_experiment_queue_artifacts.sql  0003_zenodo_sentinel_audit_runs.sql  0004_phase_khepri_rename.sql  0004_sovereign_scarab.sql  0005_strategy_queue_final_metrics.sql  0006_numeric_format_registry.sql  0006_quarantine_fake_canons.sql  0007_scarab_strategy_format_full_whitelist.sql  0008_strategy_format_expansion.sql  0009_int_lr_rescue.sql  0010_arch_breakthrough_lanes.sql  0011_arch_lanes_bind_railway.sql  0012_scarab_dead_heartbeat.sql  0013_heartbeat_janitor.sql  002_scarab_stateless.sql  2026-04-28-seed-policy.sql
schemas/: restore-fleet.schema.json
scripts/: fix_failed_experiments.sql  forensic_corpus_inventory.sql  snapshot-fleet.sh  trios442_addendum_draft.md
src/: index.ts
tmp/: runpod_deploy_20250430.jsonl
trios-railway/: .eslintrc.json  CHANGELOG.md  LAWS.md  README.md  package-lock.json  package.json  tsconfig.json
(+82 files in other folders)
