[workspace]
members = [
    "crates/trios-core",
    "crates/trios-precision-router",
    "crates/trios-golden-float",
    "crates/trios-ternary",
    "crates/trios-tri",
    "crates/trios-hybrid",
    "crates/trios-git",
    "crates/trios-server",
    "crates/trios-gb",
    "crates/trios-agents",
    "crates/trios-bridge",
    "crates/trios-trinity-brain",
    "crates/trios-zig-agents",
    "crates/trios-hdc",
    "crates/trios-physics",
    "crates/trios-sacred",
    "crates/trios-crypto",
    "crates/trios-data",
    "crates/trios-vm",
    "crates/trios-vsa",
    "crates/trios-model",
    "crates/trios-llm",
    "crates/trios-sdk",
    "crates/trios-ca-mask",
    "crates/trios-phi-schedule",
    "crates/trios-trinity-init",
    "crates/trios-fpga",
    "crates/trios-doctor",
    # trios-ext — Ring Architecture (issue #247)
    "crates/trios-ext/rings/SILVER-RING-EXT-00",
    "crates/trios-ext/rings/SILVER-RING-EXT-01",
    "crates/trios-ext/rings/SILVER-RING-EXT-02",
    "crates/trios-ext/rings/SILVER-RING-EXT-03",
    "crates/trios-ext/rings/BRONZE-RING-EXT/xtask",
    # trios-ui — Ring Architecture (Dioxus sidebar)
    "crates/trios-ui/rings/UR-00",
    "crates/trios-ui/rings/UR-07",
    "crates/trios-ui/rings/UR-08",
    "crates/trios-ui/rings/BR-APP",
    "crates/trios-igla-race",
    "crates/trios-cli",
    "crates/trios-claude",
    "contrib/anti-ban",
    "contrib/oracle",
    "crates/trios-operator-smoke",
    "crates/trios-server/xtask",
    "crates/trios-ipc", "crates/tri-tunnel", "crates/tri-cli",
    # IGLA enforcement layer (L-R14)
    "crates/trios-igla-race",
    # L13 — Rainbow Bridge (INV-8 online sync, ONE SHOT trios#267)
    "crates/trios-rainbow-bridge",
    # GOLD III — Hack layer (issue #468 SR-HACK-00 glossary)
    "crates/trios-igla-race-hack",
    # Coq proof extractor (L-R1: RUST ONLY)
    "crates/trinity-extract",
    # PhD monograph build / audit / bibliography / coq-map / reproduce (Rust-only, R1)
    "crates/trios-phd",
    # LT Phase D — page-count gate witness for trios#265 (Rust-only, R1)
    "tools/page_gate",
    "tools/acm_ae_check",
    "tools/citetheorem_audit",
    "tools/merge_order_gate",
    "tools/defense_gate",
    # tri-mcp vendor (gHashTag/tri-mcp)
    "vendor/tri-mcp/rings/SR-00",
    "vendor/tri-mcp/rings/SR-01",
    "vendor/tri-mcp/rings/SR-02",
]
exclude = [
    "crates/trios-ext",
    "crates/trios-ui",
    "crates/trios-a2a",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Dmitrii Vasilev"]
license = "MIT"
repository = "https://github.com/gHashTag/trios"

[workspace.dependencies]
tower-http = { version = "0.5", features = ["cors"] }
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.7", features = ["ws"] }
git2 = "0.19"
async-trait = "0.1"
tempfile = "3"
thiserror = "1"
futures = "0.3"
lazy_static = "1.4"
libc = "0.2"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dioxus = "0.5"
dioxus-signals = "0.5"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
log = "0.4"
wasm-logger = "0.2"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
