[package]
name = "tri-doctor"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Layer-1 autonomous Railway fleet doctor for trios-trainer-igla. Skill: docker-railway-doctor v1.2."

[[bin]]
name = "tri-doctor"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
