[package]
name        = "trios-lane-diversity-gate"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
rust-version.workspace = true
description = "R7 falsifiability gate: assert fleet has ≥3 LR × ≥3 seed before any champion declaration. Closes #774."

[dependencies]
anyhow      = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
tokio-postgres = { workspace = true }
tokio-postgres-rustls = { workspace = true }
rustls      = { workspace = true }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap        = { version = "4", features = ["derive", "env"] }

[[bin]]
name = "trios-lane-diversity-gate"
path = "src/main.rs"
