[package]
name = "sr-03-scarab-soul"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"

[lib]
path = "src/lib.rs"

[dependencies]
trios-igla-race-hack = { path = "../.." }
sr_00-scarab-types = { path = "../SR-00-scarab-types" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
